# elo-repo

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
backend/app/: config.py  main.py
backend/app/core/: exceptions.py  logging.py
backend/app/infra/: __init__.py  waha_client.py
backend/app/models/: schemas.py
backend/app/routes/: __init__.py  debug.py  telegram_webhook.py  whatsapp_webhook.py
backend/app/services/: cache_service.py  fakenews_service.py  feedback_service.py  llm_service.py  notifications_service.py  pdf_service.py  rag_service.py  response_service.py  stt_service.py  subscription_service.py  telegram_provider.py  tts_service.py  vision_service.py  web_scraper.py  whatsapp_provider_console.py  whatsapp_provider_twilio.py  whatsapp_provider_waha.py
backend/tests/: test_aggregator.py  test_basic_flow.py  test_datahub_basic.py  test_datahub_integration.py  test_fakenews_service.py  test_health.py  test_intents_auto.py  test_oraculo_audio.py  test_oraculo_flow.py  test_oraculo_image.py  test_oraculo_pdf.py  test_provider_console.py  test_provider_switch.py  test_provider_switch_mocked.py  test_rag_federado.py  test_telegram_provider.py  test_telegram_webhook_oraculo.py  test_telegram_webhook_text.py
docs/: ARQUITETURA_ELO.md  RAIO_X_ELO.md  RESUMO_MUDANCAS_ELO.md  TELEGRAM_SETUP.md
scripts/: load_test.py  reset_waha.py  setup_env.sh  simulate_multimedia.py  start.sh  telegram_polling.py
(+17 files in other folders)
