[project]
name = "elo-repo"
version = "0.1.0"
description = "ELO Assistente Cidadão Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.1",
    "python-multipart>=0.0.9",
    "tenacity>=8.2.3",
    "sentry-sdk>=1.40.0",
    "anyio>=4.2.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
